Fixes for API and added more tests
